# CortexServer

./: .gitignore  CMakeLists.txt  CortexCommon
sources/: server.cpp
